2023-09-17T08:14:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6212474823 # 1184
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
* notice: last 14d: unq all: 4 2885
* notice: prev accum: outdated-unq outdated-all / unq all: 1684 158710 / 1713 161650
* notice: next accum: outdated-unq outdated-all / unq all: 1684 158710 / 1715 161762
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-03 2023-09-17]

2023-09-17T01:01:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6210637467 # 1183
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
* notice: last 14d: unq all: 4 2864
* notice: prev accum: outdated-unq outdated-all / unq all: 1682 158409 / 1713 161557
* notice: next accum: outdated-unq outdated-all / unq all: 1684 158710 / 1713 161650
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -76 / +1 +299 -0 -0 / 1 299
* notice: removed / changed dates: [2023-09-02] / [2023-09-03 2023-09-16]

2023-09-16T16:15:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6208369204 # 1182
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 4 2887
* notice: prev accum: outdated-unq outdated-all / unq all: 1682 158409 / 1713 161462
* notice: next accum: outdated-unq outdated-all / unq all: 1682 158409 / 1713 161557
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -94 / +1 +206 -0 -0 / 1 206
* notice: removed / changed dates: [] / [2023-09-02 2023-09-16]

2023-09-16T08:14:48Z: