@@ -1,11 +1,11 @@
 {
-  "count": 2885,
+  "count": 2886,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 134,
-      "uniques": 2
+      "count": 40,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-04T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-09-17T00:00:00Z",
-      "count": 112,
+      "count": 207,
       "uniques": 2
     }
   ]
