@@ -1,3 +1,12 @@
+2023-09-17T16:15:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6214595286 # 1185
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
+* notice: last 14d: unq all: 4 2886
+* notice: prev accum: outdated-unq outdated-all / unq all: 1684 158710 / 1715 161762
+* notice: next accum: outdated-unq outdated-all / unq all: 1684 158710 / 1715 161857
+* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -94 / +2 +207 -0 -0 / 2 207
+* notice: removed / changed dates: [] / [2023-09-03 2023-09-17]
+
 2023-09-17T08:14:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6212474823 # 1184
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
